package com.mydeveloperplanet.refactor;

public class MultiDataMessage extends BaseMessage {
}
