package com.mydeveloperplanet.refactor;

public class RepositoryException extends Exception {
}
